# samp-timers

./: Cargo.toml  README.md  build.rs  timers.inc
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: tests.pwn  tests2.pwn
src/: amx_manager.rs  callback.rs  error.rs  lib.rs  timer.rs
